--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "resetDB": "node prisma/resetDB.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
